--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Octagon Style Guide</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<div id="app"></div>
-	<script type="text/javascript" src="build/bundle.js"></script></body>
+	<script type="text/javascript" src="build/bundle.2e8f9467.js"></script></body>
 </html>
